# mai-cs-c-collection-2

./: CMakeLists.txt
include/: format.js  u_vector.h  utils.h  utils_2.h
src/: utils.c  utils_2.c
tasks/task_1/: CMakeLists.txt  main.c  parser.c  parser.h  task1_tests.cpp  task_math.c  task_math.h  vectors.h
tasks/task_2/: CMakeLists.txt  nostring.h  notstring.c  task2_tests.c  task2_tests2.c
tasks/task_3/: CMakeLists.txt  helpers.c  helpers.h  overprintf.c  overprintf.h  task3_default.c  task3_tests.c
tasks/task_4/: CMakeLists.txt  helpers.c  helpers.h  overscanf.c  overscanf.h  task4_def.c  task4_tests.c  task4_tests_old.c
tasks/task_5/: CMakeLists.txt  main.c  process_file.c  process_file.h  test.txt
tasks/task_6/: CMakeLists.txt  command_handler.c  command_handler.h  example.txt  main.c  parser.c  parser.h  student.c  student.h  vectors.h
